[gd_scene load_steps=4 format=3 uid="uid://c6e8hsgoxslt3"]

[ext_resource type="Script" uid="uid://dm8aghbk4arec" path="res://Scripts/UI/scrPauseMenuMain.gd" id="1_l70pg"]
[ext_resource type="FontFile" uid="uid://4m283seugry" path="res://Graphics/Fonts/NFPixels-Regular.otf" id="2_3paqw"]
[ext_resource type="PackedScene" uid="uid://614aveijpptq" path="res://Objects/UI/objMenuButton.tscn" id="3_6y6sc"]

[node name="objPauseMenuMain" type="Control" groups=["Pause"]]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_l70pg")
main_menu = "res://Rooms/00_Title_and_menus/rMenuMain.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(800, 608)
offset_right = 800.0
offset_bottom = 608.0
color = Color(0, 0, 0, 0.588235)

[node name="ViewItems" type="Label" parent="CanvasLayer"]
offset_left = 64.0
offset_top = 528.0
offset_right = 736.0
offset_bottom = 592.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_3paqw")
theme_override_font_sizes/font_size = 40
text = "[Z] View Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -304.0
offset_right = 400.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60
alignment = 1

[node name="GamePaused" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("2_3paqw")
theme_override_font_sizes/font_size = 80
text = "- Game Paused -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="MusicVolume" parent="CanvasLayer/VBoxContainer/OptionsContainer" instance=ExtResource("3_6y6sc")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ResumeGame")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../SoundVolume")
action_mode = 0
_text = "Music Volume"

[node name="SoundVolume" parent="CanvasLayer/VBoxContainer/OptionsContainer" instance=ExtResource("3_6y6sc")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../MusicVolume")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../QuitToMenu")
action_mode = 0
_text = "Sound Volume"

[node name="QuitToMenu" parent="CanvasLayer/VBoxContainer/OptionsContainer" instance=ExtResource("3_6y6sc")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../SoundVolume")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ResumeGame")
action_mode = 0
_text = "Quit to Main Menu"

[node name="ResumeGame" parent="CanvasLayer/VBoxContainer/OptionsContainer" instance=ExtResource("3_6y6sc")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../QuitToMenu")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../MusicVolume")
action_mode = 0
_text = "Resume"

[connection signal="gui_input" from="CanvasLayer/VBoxContainer/OptionsContainer/MusicVolume" to="." method="_on_music_volume_gui_input"]
[connection signal="gui_input" from="CanvasLayer/VBoxContainer/OptionsContainer/SoundVolume" to="." method="_on_sound_volume_gui_input"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/OptionsContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/OptionsContainer/ResumeGame" to="." method="_on_resume_game_pressed"]
